# ai-sub

./: .aiexclude  .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: CONFIGURATION.md
showcase/: 28P_1Y0WbrM.srt  3n1AThmEii8.srt  42h4ydJS3zk.srt  J8ECkaNI_cYd.srt  README.md  aPaQ13pE3pk.v003.srt  cVT_yB1qpYY.srt  cfWYBUuDRA8.srt
showcase/old/: 3n1AThmEii8.v007.srt  42h4ydJS3zk.v002.srt  42h4ydJS3zk.v006.srt  42h4ydJS3zk.v007.srt  I-J11Da5ONY.v001.srt  daxeZWTGbwM.v007.srt  gdQ4eN9wzZg.v004.srt  qfilQVNlozo.v007.srt
src/ai_sub/: __init__.py  agent_wrapper.py  config.py  data_models.py  gemini.py  gemini_cli_model.py  gemini_cli_wrapper.py  gemini_file_uploader.py  genius_web_search.py  job_runner.py  lyricsgenius_web_search.py  main.py  ollama_web_search.py  prompt.py  shortcode.py  utils.py  video.py  web_search.py  web_search_langsearch.py  web_search_ollama.py
